--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,19 +10,27 @@
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Error prevention
+    avoid_print: true
+    always_declare_return_types: true
+    unawaited_futures: true
+    use_build_context_synchronously: true
+    valid_regexps: true
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # Style & Readability
+    prefer_single_quotes: true
+    prefer_final_locals: true
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_literals_to_create_immutables: true
+    sort_child_properties_last: true
+    curly_braces_in_flow_control_structures: true
+
+    # Clean Code
+    avoid_empty_else: true
+    avoid_shadowing_type_parameters: true
+    avoid_types_as_parameter_names: true
+    empty_catches: true
+    no_duplicate_case_values: true
+    null_closures: true
