--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,11 +1,11 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/nexus_core.png"
   android: "launcher_icon"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
   web:
     generate: true
-    image_path: "assets/images/logo.png"
+    image_path: "assets/images/nexus_core.png"
     background_color: "#FFFFFF"
     theme_color: "#000000"
